kubernetes/apps/mealie/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      securityContext:
        runAsUser: 911
        runAsGroup: 911
        fsGroup: 911
        runAsNonRoot: true
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0@sha256:8b02290f4d1806f02acac6f25f6d48a3c965612fda1f8e914d5af533276f8688
          imagePullPolicy: IfNotPresent
          command:
            - /app/run.sh
          volumeMounts:
            - mountPath: /app/data
              name: mealie
          workingDir: /
          resources:
            requests:
              cpu: 305m
              memory: 700Mi
            limits:
              memory: 700Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: mealie
          persistentVolumeClaim:
            claimName: mealie
