kubernetes/apps/mealie/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Mealie"
  name: mealie
  namespace: mealie
spec:
  hostnames: ["mealie.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: mealie
          namespace: mealie
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
